--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Buenard&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Paprika&display=swap" rel="stylesheet"> 
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -35,7 +36,7 @@
                 <div id="displayLink">
                     <!-- link should show up-->
                 </div>
-                <button onclick="someLink()">g</button>
+                <button onclick="randomLink()">Hi</button>
             </div>
         </div>
         <div id="projects">
@@ -56,13 +57,14 @@
             <div class="skill-container">
                 <div class="known">
                     <h3>re</h3>
-                    <h3>f</h3>
-                    <h3>54</h3>
+                    <p></p>
+                    <p></p>
+                    <p></p>
                 </div>
                 <div class="upcoming">
                     <h3>fefre</h3>
                     <p></p>
-                    <h3>4h4</h3>
+                    <p></p>
                     <p></p>
                 </div>
             </div>
