--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <!-- link should show up-->
                 </div>
                 <button onclick="randomLink()">Hi</button>
+                <a href="#" onclick="randomLink()">The Link</a>
             </div>
         </div>
         <div id="projects">
