background color & other changes

--- a/index.html
+++ b/index.html
@@ -29,28 +29,27 @@
             <div class="container">
                 <div class="text-container">
                     <h2>Me</h2>
-                    <p>yty5</p>
-                    <p>gr</p>
-                    <p>gre</p>
+                    <p>jrgoeighoirheigohogheghperhgpihegpiehpig</p>
+                    <p>gherherhjerjrejetj</p>
+                    <p>jrjr6yjj5j5j</p>
                 </div>
                 <div id="displayLink">
                     <!-- link should show up-->
                 </div>
-                <button onclick="randomLink()">Hi</button>
-                <a href="#" onclick="randomLink()">The Link</a>
+                <a href=""><button onclick="randomLink()">Hi</button></a>
             </div>
         </div>
         <div id="projects">
             <div class="project-container">
                 <div class="pastWorks">
                     <h3>cs</h3>
-                    <p></p>
+                    <p>j65j56j56j56jm</p>
                     <h3>hp</h3>
-                    <p></p>
+                    <p> rtbrtbsrtbs</p>
                     <h3>jcc</h3>
-                    <p></p>
+                    <p>bsbg gbtr</p>
                     <h3>j&d</h3>
-                    <p></p>
+                    <p>sntu t t t</p>
                 </div>
             </div>
         </div>
@@ -58,15 +57,15 @@
             <div class="skill-container">
                 <div class="known">
                     <h3>re</h3>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <p>rtnbr r</p>
+                    <p>erghry </p>
+                    <p>ikliik </p>
                 </div>
                 <div class="upcoming">
                     <h3>fefre</h3>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <p>56y56  </p>
+                    <p>tyj ty jt</p>
+                    <p>65hj rth</p>
                 </div>
             </div>
         </div>
