--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div id="displayLink">
                     <!-- link should show up-->
                 </div>
-                <a href=""><button onclick="randomLink()">Hi</button></a>
+                <a href="#"><button onclick="randomLink()">Some music</button></a>
             </div>
         </div>
         <div id="projects">
