--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     <p>jrjr6yjj5j5j</p>
                 </div>
                 <div id="displayLink">
-                    <!-- link should show up-->
+                    <!-- clickable link should show up-->
                 </div>
-                <a href="#"><button onclick="randomLink()">Some music</button></a>
+                <a target="_blank"><button onclick="randomLink()">Some music</button></a>
             </div>
         </div>
         <div id="projects">
@@ -75,9 +75,9 @@
             <p>gege</p>
         </div>
         <div class="social">
-            <li><a href="https://www.instagram.com/" target="blank"><img class="instagram" src="images/instagramlogo.jpg"></a></li>
-            <li><a href="https://www.twitter.com/" target="blank"><img class="twitter" src="images/jdbird.jpg"></a></li>
-            <li><a href="https://www.facebook.com/" target="blank"><img class="facebook" src="images/fblogo.jpg"></a></li>
+            <li><a href="https://www.instagram.com/" target="blank"><img class="instagram" src="images/instagold.jpg"></a></li>
+            <li><a href="https://www.twitter.com/" target="blank"><img class="twitter" src="images/twiterlogo5.jpg"></a></li>
+            <li><a href="https://www.facebook.com/" target="blank"><img class="facebook" src="images/facebookgold.jpg"></a></li>
         </div>
     </footer>
 </body>
