--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
             <div class="container">
                 <div class="text-container">
                     <h2>Me</h2>
-                    <p>jrgoeighoirheigohogheghperhgpihegpiehpig</p>
+                    <p>I'm Adrian and I've been coding for a liitle under a year. I am working towards to become a full stack devolper.</p>
                     <p>gherherhjerjrejetj</p>
-                    <p>jrjr6yjj5j5j</p>
+                    <p>whenever I'm coding, I usually listen to music. Below are some of the music i listen to!</p>
                 </div>
                 <div id="displayLink">
                     <!-- clickable link should show up-->
                 </div>
-                <a target="_blank"><button onclick="randomLink()">Some music</button></a>
+                <a href="#" target="_blank"><button onclick="randomLink()">Some music</button></a>
             </div>
         </div>
         <div id="projects">
             <div class="project-container">
                 <div class="pastWorks">
-                    <h3>cs</h3>
-                    <p>j65j56j56j56jm</p>
+                    <h3>Cheatsheet</h3>
+                    <p>Here's a cheatsheet I made for one of the ealier challenges.</p>
                     <h3>hp</h3>
                     <p> rtbrtbsrtbs</p>
                     <h3>jcc</h3>
@@ -72,7 +72,7 @@
     </div>
     <footer>
         <div class="end">
-            <p>gege</p>
+            <p>Contact me at any of sites!</p>
         </div>
         <div class="social">
             <li><a href="https://www.instagram.com/" target="blank"><img class="instagram" src="images/instagold.jpg"></a></li>
