--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     <p>gherherhjerjrejetj</p>
                     <p>whenever I'm coding, I usually listen to music. Below are some of the music i listen to!</p>
                 </div>
-                <div id="displayLink">
+                <a id="displayLink" href="#" target="_blank">
                     <!-- clickable link should show up-->
-                </div>
-                <a href="#" target="_blank"><button onclick="randomLink()">Some music</button></a>
+                </a>
+                <button onclick="randomLink()">Some music</button>
             </div>
         </div>
         <div id="projects">
