--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <p>gherherhjerjrejetj</p>
                     <p>whenever I'm coding, I usually listen to music. Below are some of the music i listen to!</p>
                 </div>
-                <a id="displayLink" href="#" target="_blank">
+                <a id="displayLink" href='#' target="_blank">
                     <!-- clickable link should show up-->
                 </a>
                 <button onclick="randomLink()">Some music</button>
