text added, js innerthml added, font change

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                 <div class="pastWorks">
                     <h3>Cheatsheet</h3>
                     <p>Here's a cheatsheet I made for one of the ealier challenges.</p>
-                    <h3>hp</h3>
-                    <p> rtbrtbsrtbs</p>
-                    <h3>jcc</h3>
-                    <p>bsbg gbtr</p>
-                    <h3>j&d</h3>
-                    <p>sntu t t t</p>
+                    <h3>Mix Message</h3>
+                    <p>Simple quote genarator. </p>
+                    <h3>Company Page</h3>
+                    <p>A little page for car collecter mostly into older cars.</p>
+                    <h3>Club Homepage Challenge</h3>
+                    <p>Probalbly my favorite project I've done so far. </p>
                 </div>
             </div>
         </div>
