more changed added

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </div>
         </div>
         <div id="projects">
+            <h2>My Projects</h2>
             <div class="project-container">
                 <div class="pastWorks">
                     <h3>Cheatsheet</h3>
@@ -56,14 +57,14 @@
         <div id="skills">
             <div class="skill-container">
                 <div class="known">
-                    <h3>re</h3>
-                    <p>rtnbr r</p>
+                    <h3>Skils I Known</h3>
+                    <p> So far I've leanred HTMl, CSS and JavaScript. </p>
                     <p>erghry </p>
                     <p>ikliik </p>
                 </div>
                 <div class="upcoming">
-                    <h3>fefre</h3>
-                    <p>56y56  </p>
+                    <h3>Upcoming Skills</h3>
+                    <p>I plan on learning Python, C++ and another language in the near future.  </p>
                     <p>tyj ty jt</p>
                     <p>65hj rth</p>
                 </div>
