--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             </div>
         </div>
         <div id="skills">
+            <h2>Skills</h2>
             <div class="skill-container">
                 <div class="known">
                     <h3>Skils I Known</h3>
