more classes added

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     <p>gherherhjerjrejetj</p>
                     <p>whenever I'm coding, I usually listen to music. Below are some of the music i listen to!</p>
                 </div>
-                <a id="displayLink" href='#' target="_blank">
+                <div id="displayLink">
                     <!-- clickable link should show up-->
-                </a>
+                </div>
                 <button onclick="randomLink()">Some music</button>
             </div>
         </div>
@@ -43,14 +43,22 @@
             <h2>My Projects</h2>
             <div class="project-container">
                 <div class="pastWorks">
-                    <h3>Cheatsheet</h3>
-                    <p>Here's a cheatsheet I made for one of the ealier challenges.</p>
-                    <h3>Mix Message</h3>
-                    <p>Simple quote genarator. </p>
-                    <h3>Company Page</h3>
-                    <p>A little page for car collecter mostly into older cars.</p>
-                    <h3>Club Homepage Challenge</h3>
-                    <p>Probalbly my favorite project I've done so far. </p>
+                    <div class="ch">
+                      <h3>Cheatsheet</h3>
+                      <p>Here's a cheatsheet I made for one of the ealier challenges.</p>
+                    </div>
+                    <div class="MixM">
+                        <h3>Mix Message</h3>
+                        <p>Simple quote genarator.</p>
+                    </div>    
+                    <div class="Company">
+                        <h3>Company Page</h3>
+                        <p>A little page for car collecter mostly into older cars.</p>
+                    </div>
+                    <div class="Club">
+                        <h3>Club Homepage Challenge</h3>
+                        <p>Probalbly my favorite project I've done so far. </p>
+                    </div>
                 </div>
             </div>
         </div>
