js mod, more css color

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
     <footer>
         <div class="end">
-            <p>Contact me at any of sites!</p>
+            <h3>Contact me at any of sites!</h3>
         </div>
         <div class="social">
             <li><a href="https://www.instagram.com/" target="blank"><img class="instagram" src="images/instagold.jpg"></a></li>
