more text added

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <div class="container">
                 <div class="text-container">
                     <h2>Me</h2>
-                    <p>I'm Adrian and I've been coding for a liitle under a year. I am working towards to become a full stack devolper.</p>
-                    <p>gherherhjerjrejetj</p>
-                    <p>whenever I'm coding, I usually listen to music. Below are some of the music i listen to!</p>
+                    <p>I'm Adrian and I've been coding for a little under a year. I am working towards to becoming a full stack devolper. Before deciding on this career, I dabbled into other fields.</p>
+                    <p>Hopefully I'll be able to achieve my goals in the very near future so I can spoil my dog by buying him loads of beds and blankets!</p>
+                    <p>Whenever I'm coding, I usually listen to music. Below are some of the music I listen to ranging from Jazz to Rock and Soundtracks from TV shows.!</p>
                 </div>
                 <div id="displayLink">
                     <!-- clickable link should show up-->
@@ -67,8 +67,8 @@
             <div class="skill-container">
                 <div class="known">
                     <h3>Skils I Known</h3>
-                    <p> So far I've leanred HTMl, CSS and JavaScript. </p>
-                    <p>erghry </p>
+                    <p> So far I've leanred HTMl, CSS, Git and JavaScript. </p>
+                    <p>Javascript was the first language I tried learning, but couldn't understand right away so I moved on to HTMl and slowly made my way to JavaScript.</p>
                     <p>ikliik </p>
                 </div>
                 <div class="upcoming">
