uodated class & css colors

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="end">
             <h3>Contact me at any of sites!</h3>
         </div>
-        <div class="social">
+        <div class="contact">
             <li><a href="https://www.instagram.com/" target="blank"><img class="instagram" src="images/instagold.jpg"></a></li>
             <li><a href="https://www.twitter.com/" target="blank"><img class="twitter" src="images/twiterlogo5.jpg"></a></li>
             <li><a href="https://www.facebook.com/" target="blank"><img class="facebook" src="images/facebookgold.jpg"></a></li>
