text added with links

--- a/index.html
+++ b/index.html
@@ -46,18 +46,22 @@
                     <div class="ch">
                       <h3>Cheatsheet</h3>
                       <p>Here's a cheatsheet I made for one of the ealier challenges.</p>
+                      <a href="https://msgjack.github.io/CS/">Cheatsheet</a>
                     </div>
                     <div class="MixM">
                         <h3>Mix Message</h3>
                         <p>Simple quote genarator.</p>
+                        <a href="https://msgjack.github.io/mix-message/">Mix Message</a>
                     </div>    
                     <div class="Company">
                         <h3>Company Page</h3>
                         <p>A little page for car collecter mostly into older cars.</p>
+                        <a href="https://msgjack.github.io/jcc/">Car Company Page</a>
                     </div>
                     <div class="Club">
                         <h3>Club Homepage Challenge</h3>
-                        <p>Probalbly my favorite project I've done so far. </p>
+                        <p>Probalbly my favorite project I've done so far.</p>
+                        <a href="https://msgjack.github.io/J-Dclub/">Jak & Daxter Page</a>
                     </div>
                 </div>
             </div>
