text added & color change

--- a/index.html
+++ b/index.html
@@ -72,14 +72,13 @@
                 <div class="known">
                     <h3>Skils I Known</h3>
                     <p> So far I've leanred HTMl, CSS, Git and JavaScript. </p>
-                    <p>Javascript was the first language I tried learning, but couldn't understand right away so I moved on to HTMl and slowly made my way to JavaScript.</p>
-                    <p>ikliik </p>
+                    <p>Javascript was the first language I tried learning, but couldn't understand right away so I moved on to HTMl and slowly made my way towards JavaScript.</p>
+                    <p>Currently I'm still learning about JavaScript, but still need ways to go. </p>
                 </div>
                 <div class="upcoming">
                     <h3>Upcoming Skills</h3>
                     <p>I plan on learning Python, C++ and another language in the near future.  </p>
-                    <p>tyj ty jt</p>
-                    <p>65hj rth</p>
+                    <p>Another language may be one of the mobile languages as they seem useful.</p>
                 </div>
             </div>
         </div>
