--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <p>Hopefully I'll be able to achieve my goals in the very near future so I can spoil my dog by buying him loads of beds and blankets!</p>
                     <p>Whenever I'm coding, I usually listen to music. Below are some of the music I listen to ranging from Jazz to Rock and Soundtracks from TV shows.!</p>
                 </div>
+                <img class="dog" src="images/Jack1.jpg" alt="Photo of my dog Jack!">
                 <div id="displayLink">
                     <!-- clickable link should show up-->
                 </div>
@@ -73,7 +74,7 @@
                     <h3>Skils I Known</h3>
                     <p> So far I've leanred HTMl, CSS, Git and JavaScript. </p>
                     <p>Javascript was the first language I tried learning, but couldn't understand right away so I moved on to HTMl and slowly made my way towards JavaScript.</p>
-                    <p>Currently I'm still learning about JavaScript, but still need ways to go. </p>
+                    <p>Currently I'm still learning about JavaScript, but still need ways to go.</p>
                 </div>
                 <div class="upcoming">
                     <h3>Upcoming Skills</h3>
