--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h2>Skills</h2>
             <div class="skill-container">
                 <div class="known">
-                    <h3>Skils I Known</h3>
+                    <h3>Skills I Known</h3>
                     <p> So far I've leanred HTMl, CSS, Git and JavaScript. </p>
                     <p>Javascript was the first language I tried learning, but couldn't understand right away so I moved on to HTMl and slowly made my way towards JavaScript.</p>
                     <p>Currently I'm still learning about JavaScript, but still need ways to go.</p>
