--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <p>Whenever I'm coding, I usually listen to music. Below are some of the music I listen to ranging from Jazz to Rock and Soundtracks from TV shows.!</p>
                 </div>
                 <img class="dog" src="images/Jack1.jpg" alt="Photo of my dog Jack!">
+                <figcaption>My dog Jack!</figcaption>
                 <div id="displayLink">
                     <!-- clickable link should show up-->
                 </div>
